Update all entities: Org, Department, Type, SubType, SubType relationships fixed