@@ -1,3 +1,166 @@
+// package com.MCIT.ArchiveManagementSystem.security;
+
+// import org.springframework.beans.factory.annotation.Autowired;
+// import org.springframework.boot.CommandLineRunner;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.context.annotation.Lazy;
+// import org.springframework.http.HttpMethod;
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+// import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// import com.MCIT.ArchiveManagementSystem.config.OAuth2LoginSuccessHandler;
+// import com.MCIT.ArchiveManagementSystem.models.AppRole;
+// import com.MCIT.ArchiveManagementSystem.models.Management;
+// import com.MCIT.ArchiveManagementSystem.models.Role;
+// import com.MCIT.ArchiveManagementSystem.models.User;
+// import com.MCIT.ArchiveManagementSystem.repositories.ManagementRepository;
+// import com.MCIT.ArchiveManagementSystem.repositories.RoleRepository;
+// import com.MCIT.ArchiveManagementSystem.repositories.UserRepository;
+// import com.MCIT.ArchiveManagementSystem.security.jwt.AuthEntryPointJwt;
+// import com.MCIT.ArchiveManagementSystem.security.jwt.AuthTokenFilter;
+
+// import java.time.LocalDate;
+// import java.util.List;
+
+// @Configuration
+// @EnableWebSecurity
+// @EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
+// public class SecurityConfig {
+
+//     @Autowired
+//     private AuthEntryPointJwt unauthorizedHandler;
+
+//     @Autowired
+//     @Lazy
+//     private OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
+// @Autowired
+// private ManagementRepository managementRepository;
+
+//     @Autowired
+//     private AuthTokenFilter authTokenFilter;
+
+//     @Bean
+//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//         http
+//             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//             .csrf(AbstractHttpConfigurer::disable)
+//             .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+//             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//             .authorizeHttpRequests(auth -> auth
+//                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+//                 .requestMatchers("/api/auth/public/**").permitAll()
+//                 .requestMatchers("/oauth2/**").permitAll()
+//                 .requestMatchers("/api/csrf-token").permitAll()
+//                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
+//                 .requestMatchers("/api/receipts/**").permitAll()
+//                 .requestMatchers("/api/receipts/download/**").permitAll() 
+//                 .requestMatchers("/api/files/**").permitAll()
+//                 .requestMatchers("/api/received-issued-books/**").permitAll()
+//                 .requestMatchers("/api/received-issued-books/download/**").permitAll() 
+//                 .requestMatchers("/importDoc/**").permitAll()
+//                 .requestMatchers("/exportDoc/**").permitAll()
+//                 .requestMatchers("/annual-reports/**").permitAll()
+//                 .requestMatchers("/annual-reports_info/**").permitAll()
+//                 .requestMatchers("/api/attendanceBook/**").permitAll()
+//                 .requestMatchers("/api/fileOffices/**").permitAll()
+//                 .requestMatchers("/api/received-issued-books-repository/**").permitAll()
+//                 .requestMatchers("/api/management/**").permitAll()
+
+
+
+
+//                 .anyRequest().authenticated()
+//             )
+//             .oauth2Login(oauth2 -> oauth2.successHandler(oAuth2LoginSuccessHandler))
+//             .addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class);
+
+//         return http.build();
+//     }
+
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         CorsConfiguration config = new CorsConfiguration();
+//         config.setAllowedOrigins(List.of("http://localhost:3000"));
+//         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//         config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-XSRF-TOKEN"));
+//         config.setExposedHeaders(List.of("Authorization"));
+//         config.setAllowCredentials(true);
+//         config.setMaxAge(3600L);
+
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", config);
+//         return source;
+//     }
+
+//     @Bean
+//     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//         return config.getAuthenticationManager();
+//     }
+
+//     @Bean
+//     public PasswordEncoder passwordEncoder() {
+//         return new BCryptPasswordEncoder();
+//     }
+
+//     @Bean
+//     public CommandLineRunner initData(RoleRepository roleRepository,
+//                                     UserRepository userRepository,
+//                                     PasswordEncoder passwordEncoder) {
+//         return args -> {
+//             Role userRole = roleRepository.findByRoleName(AppRole.ROLE_USER)
+//                     .orElseGet(() -> roleRepository.save(new Role(AppRole.ROLE_USER)));
+
+//             Role adminRole = roleRepository.findByRoleName(AppRole.ROLE_ADMIN)
+//                     .orElseGet(() -> roleRepository.save(new Role(AppRole.ROLE_ADMIN)));
+
+//             if (!userRepository.existsByUserName("user1")) {
+//                 User user1 = new User("user1", "user1@example.com",
+//                         passwordEncoder.encode("password1"));
+//                 user1.setAccountNonLocked(true);
+//                 user1.setAccountNonExpired(true);
+//                 user1.setCredentialsNonExpired(true);
+//                 user1.setEnabled(true);
+//                 user1.setCredentialsExpiryDate(LocalDate.now().plusYears(1));
+//                 user1.setAccountExpiryDate(LocalDate.now().plusYears(1));
+//                 user1.setTwoFactorEnabled(false);
+//                 user1.setSignUpMethod("email");
+//                 user1.setRole(userRole);
+//                 userRepository.save(user1);
+//             }
+
+//             if (!userRepository.existsByUserName("admin")) {
+//                 User admin = new User("admin", "admin@example.com",
+//                         passwordEncoder.encode("adminPass"));
+//                 admin.setAccountNonLocked(true);
+//                 admin.setAccountNonExpired(true);
+//                 admin.setCredentialsNonExpired(true);
+//                 admin.setEnabled(true);
+//                 admin.setCredentialsExpiryDate(LocalDate.now().plusYears(1));
+//                 admin.setAccountExpiryDate(LocalDate.now().plusYears(1));
+//                 admin.setTwoFactorEnabled(false);
+//                 admin.setSignUpMethod("email");
+//                 admin.setRole(adminRole);
+//                  Management management = managementRepository.findById(1L).orElse(null); // دلته ID بدل کړه
+//     admin.setManagement(management);
+//                 userRepository.save(admin);
+//             }
+//         };
+//     }
+// }
+
 package com.MCIT.ArchiveManagementSystem.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,14 +186,17 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.MCIT.ArchiveManagementSystem.config.OAuth2LoginSuccessHandler;
 import com.MCIT.ArchiveManagementSystem.models.AppRole;
+import com.MCIT.ArchiveManagementSystem.models.Management;
 import com.MCIT.ArchiveManagementSystem.models.Role;
 import com.MCIT.ArchiveManagementSystem.models.User;
+import com.MCIT.ArchiveManagementSystem.repositories.ManagementRepository;
 import com.MCIT.ArchiveManagementSystem.repositories.RoleRepository;
 import com.MCIT.ArchiveManagementSystem.repositories.UserRepository;
 import com.MCIT.ArchiveManagementSystem.security.jwt.AuthEntryPointJwt;
 import com.MCIT.ArchiveManagementSystem.security.jwt.AuthTokenFilter;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -44,6 +210,9 @@ public class SecurityConfig {
     @Autowired
     @Lazy
     private OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
+
+    @Autowired
+    private ManagementRepository managementRepository;
 
     @Autowired
     private AuthTokenFilter authTokenFilter;
@@ -73,10 +242,7 @@ public class SecurityConfig {
                 .requestMatchers("/api/attendanceBook/**").permitAll()
                 .requestMatchers("/api/fileOffices/**").permitAll()
                 .requestMatchers("/api/received-issued-books-repository/**").permitAll()
-
-
-
-
+                .requestMatchers("/api/management/**").permitAll()
                 .anyRequest().authenticated()
             )
             .oauth2Login(oauth2 -> oauth2.successHandler(oAuth2LoginSuccessHandler))
@@ -88,10 +254,21 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-XSRF-TOKEN"));
-        config.setExposedHeaders(List.of("Authorization"));
+        
+        // FIXED: Use setAllowedOriginPatterns instead of setAllowedOrigins
+        // This allows credentials while accepting multiple origins
+        config.setAllowedOriginPatterns(Arrays.asList(
+            "http://localhost:3000",
+            "http://localhost:8081",
+            "http://localhost:4200"
+        ));
+        
+        // If you want to allow all origins in development:
+        // config.setAllowedOriginPatterns(Arrays.asList("*"));
+        
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-XSRF-TOKEN", "X-Requested-With", "Accept", "Origin"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Access-Control-Allow-Origin"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
@@ -148,6 +325,8 @@ public class SecurityConfig {
                 admin.setTwoFactorEnabled(false);
                 admin.setSignUpMethod("email");
                 admin.setRole(adminRole);
+                Management management = managementRepository.findById(1L).orElse(null);
+                admin.setManagement(management);
                 userRepository.save(admin);
             }
         };
